create memory started

--- a/app/src/main/res/drawable/curved_border.xml
+++ b/app/src/main/res/drawable/curved_border.xml
@@ -8,5 +8,6 @@
         android:left="2dp"
         android:right="2dp"
         android:top="2dp" />
+    <corners android:radius="5dp" />
     <solid android:color="#ffffffff" />
 </shape>
